# tranquil

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  bvh.hpp  common.hpp  core.hpp  imgui.ini  main.c  main.cpp  opengl.cpp  renderdoc.cap  shader.glsl  shades.hpp  smake.yaml
shaders/: bvh.glsl  constants.glsl  hmap.glsl  inputs.glsl  intersection.glsl  pixelizer.glsl  shader.glsl  shading.glsl  structs.glsl  texture.frag  texture.vert
src/: base.frag  base.vert  camera.rs  heightmap.tcs  heightmap.tes  io.rs  main.rs  math.rs  transform.rs
